welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
(taille:Int):Array[Color] { getMondeHauteur(); 
                            ^Array1:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	for (i<-0 to taille-1) {getCouleurSol()}}
        ^